--- a/portfolio/graphic_03.html
+++ b/portfolio/graphic_03.html
@@ -30,7 +30,7 @@
             <div class="col-md-8 col-md-offset-2 text-right">
                 <div class="sstitle">BI Design</div>
                 <div class="project-tle">Kibeacon</div>
-                <div class="project-info">KIES + BEACON </div>
+                <div class="project-info">KIES + BEACON의 합성어로 회사의 정체성을 표현한 비콘 네임</div>
             </div>
         </div>
         
@@ -40,13 +40,13 @@
 
                 <div class="row row-pt-md portfolio-navigation">
                     <div class="col-xs-4 text-left">
-                        <a href="graphic_03.html" class="btn btn-primary btn-outline"><i class="icon-chevron-left"></i> Prev </a>
+                        <a href="graphic_04.html" class="btn btn-primary btn-outline"><i class="icon-chevron-left"></i> Prev </a>
                     </div>
                     <div class="col-xs-4 text-center">
                         <a href="../index.html" class="btn btn-primary btn-outline"><i class="icon-grid2"></i> View All</a>
                     </div>
                     <div class="col-xs-4 text-right">
-                        <a href="graphic_01.html" class="btn btn-primary btn-outline">Next <i class="icon-chevron-right"></i></a>
+                        <a href="graphic_02.html" class="btn btn-primary btn-outline">Next <i class="icon-chevron-right"></i></a>
                     </div>
                 </div>
             </div>
