--- a/portfolio/graphic_05.html
+++ b/portfolio/graphic_05.html
@@ -30,7 +30,7 @@
             <div class="col-md-8 col-md-offset-2 text-right">
                 <div class="sstitle">Brochure Design</div>
                 <div class="project-tle">WAYSYSTEM</div>
-                <div class="project-info">KIES + BEACON </div>
+                <div class="project-info">WAYSYSTEM 솔루션 소개 브로슈어 디자인</div>
             </div>
         </div>
         
@@ -41,13 +41,13 @@
 
                 <div class="row row-pt-md portfolio-navigation">
                     <div class="col-xs-4 text-left">
-                        <a href="graphic_03.html" class="btn btn-primary btn-outline"><i class="icon-chevron-left"></i> Prev </a>
+                        <a href="graphic_06.html" class="btn btn-primary btn-outline"><i class="icon-chevron-left"></i> Prev </a>
                     </div>
                     <div class="col-xs-4 text-center">
                         <a href="../index.html" class="btn btn-primary btn-outline"><i class="icon-grid2"></i> View All</a>
                     </div>
                     <div class="col-xs-4 text-right">
-                        <a href="graphic_01.html" class="btn btn-primary btn-outline">Next <i class="icon-chevron-right"></i></a>
+                        <a href="graphic_04.html" class="btn btn-primary btn-outline">Next <i class="icon-chevron-right"></i></a>
                     </div>
                 </div>
             </div>
