--- a/portfolio/graphic_06.html
+++ b/portfolio/graphic_06.html
@@ -30,7 +30,7 @@
             <div class="col-md-8 col-md-offset-2 text-right">
                 <div class="sstitle">Brochure Design</div>
                 <div class="project-tle">RollBook</div>
-                <div class="project-info">KIES + BEACON </div>
+                <div class="project-info">RollBook 솔루션 소개 브로슈어 디자인</div>
             </div>
         </div>
         
