--- a/portfolio/graphic_07.html
+++ b/portfolio/graphic_07.html
@@ -30,7 +30,7 @@
             <div class="col-md-8 col-md-offset-2 text-right">
                 <div class="sstitle">회사 지면광고 Design</div>
                 <div class="project-tle">회사 지면광고 디자인</div>
-                <div class="project-info">KIES + BEACON </div>
+<!--                <div class="project-info">KIES + BEACON </div>-->
             </div>
         </div>
         
