--- a/portfolio/web_06.html
+++ b/portfolio/web_06.html
@@ -30,7 +30,7 @@
             <div class="col-md-8 col-md-offset-2 text-right">
                 <div class="sstitle">WEB Design</div>
                 <div class="project-tle">Eqiman CRM 사이트</div>
-                <div class="project-info">시간/장소에 관계없이 일정만 등록하면 일정알림, 자동체크인/아웃, 보고서생성까지 One-Step Process로 체계적인 외근관리를 제공하는 솔루션 CRM 관리자 페이지.
+                <div class="project-info">Engineer로 하여금 스마트한 작업 환경 제공하고 Equipment의 주기적인 예방정비 업무 및 일정계획의 간편한 관리를 위한 솔루션 CRM 관리자 페이지.
                     <div style="margin-top: 15px;"><a href="http://www.eqiman.co.id/gandariacity/login" target="_blank" class="btn btn-primary">사이트 바로가기</a></div>
                 </div>
                 
@@ -50,7 +50,7 @@
                     <div class="col-md-4">
                         <div class="design-info">
                             <p>기간</p>
-                            <p>2014년 11월 <br>~ 2015년 3월</p>
+                            <p>2016년 6월 <br>~ 2016년 10월</p>
                         </div>
                     </div>
                 </div><!--//.row-->
