--- a/portfolio/graphic_01.html
+++ b/portfolio/graphic_01.html
@@ -47,7 +47,7 @@
                         <a href="../index.html" class="btn btn-primary btn-outline"><i class="icon-grid2"></i> View All</a>
                     </div>
                     <div class="col-xs-4 text-right">
-                        <a class="btn btn-primary btn-outline">Next <i class="icon-chevron-right"></i></a>
+                        <a href="../index.html" class="btn btn-primary btn-outline">Next <i class="icon-chevron-right"></i></a>
                     </div>
                 </div>
             </div>
