--- a/portfolio/web_04.html
+++ b/portfolio/web_04.html
@@ -30,7 +30,7 @@
             <div class="col-md-8 col-md-offset-2 text-right">
                 <div class="sstitle">WEB Design</div>
                 <div class="project-tle">EYERIS CRM 사이트</div>
-                <div class="project-info">시간/장소에 관계없이 일정만 등록하면 일정알림, 자동체크인/아웃, 보고서생성까지 One-Step Process로 체계적인 외근관리를 제공하는 솔루션 CRM 관리자 페이지.
+                <div class="project-info">홍채등록 출퇴근관리를 위한 CRM 관리자 페이지.
                     <div style="margin-top: 15px;"><a href="http://222.233.76.237/kies/login" target="_blank" class="btn btn-primary">사이트 바로가기</a></div>
                 </div>
                 
@@ -44,13 +44,13 @@
                     <div class="col-md-4">
                         <div class="design-info">
                             <p>참여율</p>
-                            <p class="num">90%</p>
+                            <p class="num">100%</p>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="design-info">
                             <p>기간</p>
-                            <p>2014년 11월 <br>~ 2015년 3월</p>
+                            <p>2017년 12월 <br>~ 2018년 1월</p>
                         </div>
                     </div>
                 </div><!--//.row-->
